grammar.js
    source_file: $ => repeat($._item),

    // ---- Items ----

    _item: $ => seq(
      repeat($.attribute),
      // Visibility is hoisted to item level per spec grammar.ebnf:27
      //   Item = Attribute* Visibility? ( Import | ConstDecl | ... )
      optional($.visibility),
      choice(
        $.import_declaration,
        $.const_declaration,
        $.struct_declaration,
        $.tuple_type_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.impl_declaration,
        $.function_declaration,
        $.gen_function_declaration,
        $.extern_block,
        $.actor_declaration,
        $.supervisor_declaration,
        $.machine_declaration,
        $.type_alias,
      ),
    ),

    // Attribute args accept both a positional list (`#[derive(Debug, Clone)]`)
    // and `key = value` pairs (`#[wire(version = 2, min_version = 1)]`), matching
    // the real parser's AttributeArg forms (hew-parser wire.rs
    // reads `version`/`min_version` as KeyValue args).
    import_declaration: $ => seq(
      'import',
      choice(
        $.string_literal,
        seq($.module_path, optional(seq('.', $._import_selection))),
      ),
      // A complete module path may carry an alias (`import a.b as c`).
      // Explicit selection members carry their own aliases instead.
      optional(seq('as', field('alias', $.identifier))),
      ';',
    ),

    module_path: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    _import_selection: $ => seq('{', sep1($.import_name, ','), optional(','), '}'),

    struct_declaration: $ => seq(
      'type',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.where_clause),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq('{', repeat(choice(
      $.struct_field,
      $.reserved_declaration,
      seq(optional($.visibility), $.function_declaration),
    )), '}'),

    // StructFieldDecl / WireStructFieldDecl (grammar.ebnf:68, 76):
    // `Attribute* Ident ":" Type ("@" IntLit)? WireAttr* ";"`.
    // The real parser attaches `@N` tags and trailing wire modifiers to a normal
    // `type` declaration when a `#[wire]` attribute is present.
    struct_field: $ => seq(
      repeat($.attribute),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('@', $.integer_literal)),
      repeat($.wire_attribute),
      ';',
    ),

    // `type Name(T, T, ...);` — positional/tuple record. The bare `record`
    // keyword form (both named- and tuple-body) was removed from the
    // compiler ("record has been removed; use `type Name { ... }` instead");
    // the tuple-positional shape survives under the `type` keyword, dispatched
    // by the parser's `is_tuple_type_lookahead` (hew-parser items.rs:441-457,
    // parse_record_decl at items.rs:941-983). The named-body form is just
    // `struct_declaration` (`type Name { field: T, ... }`).
    enum_declaration: $ => seq(
      optional('indirect'),
      'enum',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.where_clause),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq('{', repeat($.variant), '}'),

    variant: $ => seq(
      field('name', $.identifier),
      choice(
        ';',
        seq('(', sep1($._type, ','), optional(','), ')', ';'),
        seq('{', repeat($.struct_field), '}'),
      ),
    ),

    // NOTE: the legacy bare `wire` keyword item form (`wire struct/enum/type
    // Name { … }`) was removed from the compiler in hew commit 60c50daef
    // ("refactor(parser): remove the wire keyword surface in favor of #[wire]").
    // The current surface is `#[wire] type Name { … }` / `#[wire] enum Name { … }`:
    // both struct-shaped and enum-shaped wire types use the generic `#[wire]`
    // attribute on ordinary `type` / `enum` declarations.

    // `reserved @N, @M;` inside a `#[wire] type` body reserves wire field
    // numbers (hew-parser wire.rs:222-248 expects `@` markers, comma-separated,
    // terminated by `;`). The old parenthesised `reserved(N, M);` form is not
    // accepted by the compiler.
    function_declaration: $ => seq(
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      '(',
      optional($.parameters),
      ')',
      optional($.return_type),
      optional($.where_clause),
      field('body', $.block),
    ),

    parameters: $ => sep1($.parameter, ','),

    // Param (hew-parser `parse_params_with_implicit_self_and_context`) admits
    // `consume` and then `var`, independently and in that order. `consume` is
    // the affine FFI/resource ownership modifier, e.g.
    // `fn hew_handle_free(consume h: Handle);`, and `consume var items: T`
    // is accepted — `var consume` is not.
    // In trait/impl method position a leading bare receiver is also accepted:
    // `self`, `var self`, or `consume self` — all without a type annotation, as
    // `Self`-typed receiver sugar (hew-parser/src/parser/types.rs
    // `eat_consume_self_receiver`). `consuming self` is refused by the compiler
    // with a fix-it and `this` is an ordinary identifier.
    parameter: $ => choice(
      $.self_parameter,
      seq(
        optional('consume'),
        optional('var'),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),
    ),

    return_type: $ => prec.right(seq('->', $._type, optional($.failure_return))),

    type_arguments: $ => seq('<', sep1($._type_argument, ','), '>'),

    // A type argument is a type, or an associated-type binding `Ident = Type`
    // (e.g. `Iterator<Item = A>`). The binding form is accepted by the real
    // parser's parse_trait_bound_args (hew-parser/src/parser.rs) for trait
    // bounds; allowing it in any type-arg list is harmlessly permissive.
    _type_argument: $ => choice(
      $._type,
      $.integer_literal,
      $.associated_type_binding,
    ),

    _type: $ => choice(
      $.primitive_type,
      $.identifier,
      $.generic_type,
      $.scoped_type,
      $.projection_type,
      $.tuple_type,
      $.array_type,
      $.slice_type,
      $.function_type,
      $.actor_type,
      $.pointer_type,
      $.borrow_type,
      $.trait_object_type,
      $.unit_type,
    ),

    // @sync:primitive_types
    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'u8', 'u16', 'u32', 'u64', 'isize', 'usize',
      'f32', 'f64', 'bool', 'char', 'string', 'bytes', 'duration', 'instant',
    ),

    generic_type: $ => prec(1, seq($.identifier, $.type_arguments)),

    // Qualified type name: `mod.Type` or `a.b.C`, with an optional trailing
    // type-arg list (e.g. `mod.Worker<T>`). Dotted paths are used throughout
    // the current surface for cross-module types (`net.NetError`, `fs.IoError`).
    function_type: $ => prec(1, seq(
      'fn', optional($.callable_capabilities),
      '(', optional(sep1($._type, ',')), ')', optional($.return_type),
    )),

    // actor(M) [-> R] — the type of an anonymous actor handle
    // (hew-parser/src/parser/types.rs, `Token::Actor` in the type parser); a named actor's
    // handle is spelled by the actor's own name.
    callable_capabilities: $ => seq('[', sep1(choice('var', 'once', 'clone', 'suspends'), ','), ']'),

    // *const T / *mut T — raw pointer types. Real but FFI/unsafe-scoped; *var T is legacy and rejected.
    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      // A stray `;` after a statement is accepted by the compiler with an
      // "unnecessary semicolon" warning (hew-parser statements.rs), so
      // `defer { … };` and `};` stay ERROR-free here.
      $.empty_statement,
      $.let_statement,
      $.var_statement,
      $.assignment_statement,
      $.defer_statement,
      $.emit_statement,

      $.for_statement,
      $.while_statement,
      $.while_let_statement,
      $.loop_statement,
      $.break_statement,
      $.continue_statement,
      $.expression_statement,
      $.if_statement,
      $.match_statement,
      $.block_statement,
    ),

    // LetStmt (grammar.ebnf): the initializer is optional — `let x: i64;` is a
    // bare declaration whose definite-assignment is checked later by the move
    // checker (examples/v05/checked-mir/reject/init_before_use.hew).
    let_statement: $ => seq(
      'let',
      field('pattern', $.pattern),
      // `let r? = expr;` was removed from the compiler (statements.rs refuses it
      // with a hint); only `let r = expr?;` remains.
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', choice($.expression, $.block)))),
      // let-else: `let Pat = expr else { <diverging block> };`
      // (hew-parser statements.rs:312-341).
      optional(seq('else', field('else', $.block))),
      ';',
    ),

    var_statement: $ => seq(
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $.expression),
      ';',
    ),

    assignment_statement: $ => seq(
      field('left', $.expression),
      // @sync:assignment_operators
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=')),
      field('right', $.expression),
      ';',
    ),

    _match_arm_head: $ => seq(
      field('pattern', $.pattern),
      // The compiler accepts a block-valued, including diverging, match guard.
      optional(seq('if', field('guard', choice($.expression, $.block)))),
      '=>',
    ),

    match_arm: $ => prec(3, seq(
      $._match_arm_head,
      field('value', choice($._block_arm_value, seq($.expression, ','))),
    )),

    _match_final_arm: $ => prec(3, seq($._match_arm_head, field('value', $.expression))),

    // Match and select share the compiler's source-token classification:
    // brace-bodied expressions end at `}`, while other expressions need `,`.
    _block_arm_value: $ => choice(
      $.block,
      $.if_expression,
      $.match_expression,
      $.scope_expression,
      $.unsafe_expression,
      $.select_expression,
      seq('fork', $.block),
    ),



    return_expression: $ => prec.right(seq('return', optional($.expression))),

    // Deferred cleanup may be an expression statement or a scoped block.
    // `defer <expr>;` or `defer { … }` — a block body needs no `;`
    // (hew-parser statements.rs `Token::Defer`).
    expression_statement: $ => prec.right(seq($.expression, optional(';'))),

    expression: $ => choice(
      $.identifier,
      alias('capture', $.identifier),
      $.self,
      $._literal,
      $.interpolated_string,
      $.unary_expression,
      $.binary_expression,
      $.timeout_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.index_expression,
      $.try_expression,
      $.cast_expression,
      $.await_expression,
      $.clone_expression,
      $.struct_init,
      $.generic_struct_init,
      $.contextual_variant_expression,
      $.contextual_variant_record_init,
      $.generic_apply_expression,
      $.array_expression,
      $.array_repeat,
      $.map_literal,
      $.tuple_expression,
      $.unit_expression,
      $.parenthesized_expression,
      $.if_expression,
      $.match_expression,
      $.lambda,
      $.actor_expression,
      $.spawn_expression,
      $.select_expression,
      $.race_expression,
      $.fork_expression,
      $.handle_expression,
      $.scope_expression,
      $.yield_expression,
      $.return_expression,
      $.gen_block_expression,
      $.qualified_expression,
      $.generic_call_expression,
      $.bare_generic_call_expression,
      $.byte_array_expression,
      $.unsafe_expression,
    ),

    // @sync:supervisor_strategies
    // Real lexer keywords (hew-lexer lex:189-195); used as the value of the
    // `strategy:` field in a supervisor declaration body.
    binary_expression: $ => choice(
      prec.left(PREC.OR, seq($.expression, '||', $._binary_operand)),
      prec.left(PREC.BIT_OR, seq($.expression, '|', $._binary_operand)),
      prec.left(PREC.BIT_XOR, seq($.expression, '^', $._binary_operand)),
      prec.left(PREC.AND, seq($.expression, '&&', $._binary_operand)),
      prec.left(PREC.BIT_AND, seq($.expression, '&', $._binary_operand)),
      prec.left(PREC.EQ, seq($.expression, choice('==', '!=', 'is'), $._binary_operand)),
      prec.left(PREC.REL, seq($.expression, choice('<', '<=', '>', '>='), $._binary_operand)),
      prec.right(PREC.RANGE, seq($.expression, choice('..', '..='), $._binary_operand)),
      prec.left(PREC.SHIFT, seq($.expression, choice('<<', '>>'), $._binary_operand)),
      // '+' also concatenates strings; '&+'/'&-' are two's-complement wrapping
      // forms (grammar.ebnf:233, Hew.g4:658).
      prec.left(PREC.ADD, seq($.expression, choice('+', '-', '&+', '&-'), $._binary_operand)),
      // '&*' is two's-complement wrapping multiply (grammar.ebnf:234, Hew.g4:663).
      prec.left(PREC.MUL, seq($.expression, choice('*', '/', '%', '&*'), $._binary_operand)),
    ),

    _binary_operand: $ => choice($.expression, $.block),

    // Left associativity keeps postfix calls composable after a completed
    // field/call chain (`value.slice(...).to_lower()`).
    call_expression: $ => prec.left(PREC.FIELD + 1, seq(
      field('function', $.expression),
      '(',
      optional(sep1($.call_argument, ',')),
      optional(','),
      ')',
    )),

    // A member call must remain a single postfix expression even where `(`
    // could begin the following match pattern. Its function is structurally a
    // field expression, so this does not overlap plain calls or grouping.
    method_call_expression: $ => prec.dynamic(2, prec.left(PREC.FIELD + 2, seq(
      field('object', $._member_object),
      '.',
      field('method', $.identifier),
      '(',
      optional(sep1($.call_argument, ',')),
      optional(','),
      ')',
    ))),

    _member_object: $ => choice(
      $.identifier,
      $.self,
      $._literal,
      $.parenthesized_expression,
      $.qualified_expression,
      $.call_expression,
      $.field_expression,
      $.index_expression,
      $.method_call_expression,
      $.generic_apply_expression,
    ),

    // Dotted path expression `path.name`. It composes with calls and the generic
    // call form below while keeping path-headed struct inits separate.
    generic_apply_expression: $ => prec.dynamic(-1, prec(PREC.POSTFIX, seq(
      field('target', choice($.identifier, $.qualified_expression)),
      token.immediate('<'),
      sep1($._type, ','),
      '>',
    ))),

    // A bare generic call is lexically ambiguous with comparison. Current
    // accepted source spells its type-argument opener adjacent to the callee,
    // which is also the compiler's canonical formatter output. Requiring that
    // adjacency keeps `i < n` and `a < b` unambiguously binary expressions.
    call_argument: $ => choice(
      seq(field('name', $.identifier), ':', field('value', choice($.expression, $.block))),
      $.expression,
      $.block,
    ),

    field_expression: $ => prec(PREC.FIELD, seq(
      field('object', $.expression),
      '.',
      field('field', choice($.identifier, $.integer_literal)),
    )),

    cast_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $.expression),
      'as',
      field('type', $._type),
    )),

    clone_expression: $ => prec(PREC.UNARY, seq(
      'clone',
      $.expression,
    )),

    struct_init: $ => prec.dynamic(1, seq(
      field('name', choice($.identifier, $.path_expression)),
      '{',
      optional(seq(sep1($.field_initializer, ','), optional(','))),
      '}',
    )),

    // As with a bare generic call, adjacency of `<` distinguishes a generic
    // constructor from comparison while preserving `i < n`.
    map_literal: $ => seq(
      '{',
      optional(seq(sep1($.map_entry, ','), optional(','))),
      '}',
    ),
