test/corpus/basics.txt
================================================================================
Simple function
================================================================================

fn main() -> i32 {
    0
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (expression
          (integer_literal))))))

================================================================================
Function with parameters
================================================================================

fn add(x: i32, y: i32) -> i32 {
    x + y
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (expression
          (binary_expression
            (expression
              (identifier))
            (expression
              (identifier))))))))

================================================================================
Let binding
================================================================================

fn main() {
    let x = 42;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (integer_literal))))))

================================================================================
Var binding
================================================================================

fn main() {
    var x: i32 = 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (var_statement
        name: (identifier)
        type: (primitive_type)
        value: (expression
          (integer_literal))))))

================================================================================
If expression
================================================================================

fn main() -> i32 {
    if true { 1 } else { 0 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (expression
          (if_expression
            condition: (expression
              (boolean_literal))
            consequence: (block
              (expression_statement
                (expression
                  (integer_literal))))
            alternative: (else_clause
              (block
                (expression_statement
                  (expression
                    (integer_literal)))))))))))

================================================================================
Match expression
================================================================================

fn main() -> i32 {
    match x {
        1 => 10,
        _ => 0,
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (expression
          (match_expression
            value: (expression
              (identifier))
            (match_arm
              pattern: (pattern
                (integer_literal))
              value: (expression
                (integer_literal)))
            (match_arm
              pattern: (pattern)
              value: (expression
                (integer_literal)))))))))

================================================================================
Map literal
================================================================================

fn main() {
    let m = {"name": "Alice", "age": "30"};
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (map_literal
            (map_entry
              key: (expression
                (string_literal
                  (string_content)))
              value: (expression
                (string_literal
                  (string_content))))
            (map_entry
              key: (expression
                (string_literal
                  (string_content)))
              value: (expression
                (string_literal
                  (string_content))))))))))

================================================================================
Byte string literal
================================================================================

fn main() {
    let data = b"hello";
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (byte_string_literal))))))

================================================================================
While let statement
================================================================================

fn main() {
    while let Some(x) = iter.next() {
        process(x);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (while_statement
        condition: (let_condition
          pattern: (pattern
            (constructor_pattern
              name: (identifier)
              (pattern
                (identifier))))
          value: (expression
            (method_call_expression
              object: (identifier)
              method: (identifier))))
        body: (block
          (expression_statement
            (expression
              (call_expression
                function: (expression
                  (identifier))
                (call_argument
                  (expression
                    (identifier)))))))))))

================================================================================
Cast expression
================================================================================

fn main() {
    let y = x as u64;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (cast_expression
            value: (expression
              (identifier))
            type: (primitive_type)))))))

================================================================================
Char literal
================================================================================

fn main() {
    let c = 'a';
    let escaped = '\n';
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (char_literal)))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (char_literal))))))

================================================================================
Char literal in pattern position
================================================================================

fn main() {
    match c {
        'a' => 1,
        _ => 0,
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (expression_statement
        (expression
          (match_expression
            value: (expression
              (identifier))
            (match_arm
              pattern: (pattern
                (char_literal))
              value: (expression
                (integer_literal)))
            (match_arm
              pattern: (pattern)
              value: (expression
                (integer_literal)))))))))

================================================================================
If let expression
================================================================================

fn main() {
    if let Some(x) = value {
        println(x);
    } else {
        println(0);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (expression_statement
        (expression
          (if_expression
            condition: (let_condition
              pattern: (pattern
                (constructor_pattern
                  name: (identifier)
                  (pattern
                    (identifier))))
              value: (expression
                (identifier)))
            consequence: (block
              (expression_statement
                (expression
                  (call_expression
                    function: (expression
                      (identifier))
                    (call_argument
                      (expression
                        (identifier)))))))
            alternative: (else_clause
              (block
                (expression_statement
                  (expression
                    (call_expression
                      function: (expression
                        (identifier))
                      (call_argument
                        (expression
                          (integer_literal))))))))))))))

================================================================================
If let as expression
================================================================================

fn main() {
    let result = if let Some(x) = value { x } else { 0 };
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (expression
          (if_expression
            condition: (let_condition
              pattern: (pattern
                (constructor_pattern
                  name: (identifier)
                  (pattern
                    (identifier))))
              value: (expression
                (identifier)))
            consequence: (block
              (expression_statement
                (expression
                  (identifier))))
            alternative: (else_clause
              (block
                (expression_statement
                  (expression
                    (integer_literal)))))))))))
