test/corpus/callable_capabilities.txt
================================================================================
Callable guarantees and private mutable capture
================================================================================

fn invoke(f: fn[clone](i64) -> i64, g: fn[var, clone]() -> i64,
          h: fn[once]() -> i64, i: fn[var]() -> i64,
          j: fn[once, clone]() -> i64, k: fn() -> i64) {
    let count: i64 = 0;
    var next = capture(var count) || { count = count + 1; count };
    let moved = move capture(var count) |step: i64| { count = count + step; count };
    let explicit = id<i64>;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (function_type
          (callable_capabilities)
          (primitive_type)
          (return_type
            (primitive_type))))
      (parameter
        (identifier)
        (function_type
          (callable_capabilities)
          (return_type
            (primitive_type))))
      (parameter
        (identifier)
        (function_type
          (callable_capabilities)
          (return_type
            (primitive_type))))
      (parameter
        (identifier)
        (function_type
          (callable_capabilities)
          (return_type
            (primitive_type))))
      (parameter
        (identifier)
        (function_type
          (callable_capabilities)
          (return_type
            (primitive_type))))
      (parameter
        (identifier)
        (function_type
          (return_type
            (primitive_type)))))
    (block
      (let_statement
        (pattern
          (identifier))
        (primitive_type)
        (expression
          (integer_literal)))
      (var_statement
        (identifier)
        (expression
          (lambda
            (private_capture_list
              (private_capture
                (identifier)))
            (block
              (assignment_statement
                (expression
                  (identifier))
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal)))))
              (expression_statement
                (expression
                  (identifier)))))))
      (let_statement
        (pattern
          (identifier))
        (expression
          (lambda
            (private_capture_list
              (private_capture
                (identifier)))
            (lambda_parameter
              (identifier)
              (primitive_type))
            (block
              (assignment_statement
                (expression
                  (identifier))
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (identifier)))))
              (expression_statement
                (expression
                  (identifier)))))))
      (let_statement
        (pattern
          (identifier))
        (expression
          (generic_apply_expression
            (identifier)
            (primitive_type)))))))

================================================================================
Capture and once remain ordinary identifiers outside callable syntax
================================================================================

fn capture(once: i64) -> i64 { once }
fn main() { capture(1); }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (return_type
      (primitive_type))
    (block
      (expression_statement
        (expression
          (identifier)))))
  (function_declaration
    (identifier)
    (block
      (expression_statement
        (expression
          (call_expression
            (expression
              (identifier))
            (call_argument
              (expression
                (integer_literal)))))))))
